--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -14,12 +14,12 @@
 			.mui-bar-tab .mui-tab-item.mui-active {
 				color: #00a5e01;
 			}
-
+			
 			.mui-slider {
 				position: absolute;
 				left: 0px;
 			}
-
+			
 			.mui-slider-indicator .mui-indicator {
 				margin: 0px 2px;
 			}
@@ -27,13 +27,14 @@
 	</head>
 
 	<body>
+
 		<header class="mui-bar mui-bar-nav common-background-bar">
 			<div id="title_left"></div>
 			<h1 id="title" class="mui-title"></h1>
 			<div id="random_icon">
-				<a id="pubDynamic" class="mui-icon mui-pull-right mui-plus-visible" style="padding-left: 30px;padding-top: 15px;font-size: 16px;">晒一晒</a>
-				<a id="aboutme" class="mui-icon  mui-pull-right mui-plus-visible" style="font-size: 16px;padding-top: 15px;">@与我相关<span id="aboutme_noRead" style="margin-left: -15px;margin-top: 4px;visibility:hidden;" class="mui-badge mui-badge-danger">4</span></a>
+				<a id="plus" class="mui-icon mui-pull-right mui-icon-plusempty"></a>
 			</div>
+
 		</header>
 
 		<!--底部选项卡（.mui-bar-tab）-->
