--- a/JiaoBaoYun-hb/html/show/add-comment.html
+++ b/JiaoBaoYun-hb/html/show/add-comment.html
@@ -122,15 +122,24 @@
 							wd.close();
 							console.log('添加空间评论回复_addUserSpaceCommentReply' + JSON.stringify(data));
 							if(data.RspCode == 0) {
+								var Reply = {
+									TabId:data.RspData.Result,
+									ReplyId:replyUserId,
+									UserId:personalUTID,
+									UpperId:upperId,
+									CommentContent:inputComment.value
+								}
 								mui.fire(plus.webview.currentWebview().opener(), 'refreshShow', {
 									tempIndex: tempIndex,
 									content: inputComment.value,
-									flag: '评论回复'
+									flag: '评论回复',
+									Reply:Reply
 								})
 								mui.fire(plus.webview.currentWebview().opener(), 'refreshZonep', {
 									tempIndex: tempIndex,
 									content: inputComment.value,
-									flag: '评论回复'
+									flag: '评论回复',
+									Reply:Reply
 								})
 								mui.back();
 							}else{
@@ -150,15 +159,25 @@
 							wd.close();
 							console.log('添加空间评论_addUserSpaceComment' + JSON.stringify(data));
 							if(data.RspCode == 0) {
+								var Comment = {
+									TabId:data.RspData.Result,
+									Replys:[],
+									ReplyId:0,
+									UserId:personalUTID,
+									UpperId:0,
+									
+								}
 								mui.fire(plus.webview.currentWebview().opener(), 'refreshShow', {
 									tempIndex: tempIndex,
 									content: inputComment.value,
-									flag: '评论'
+									flag: '评论',
+									Comment:Comment
 								})
 								mui.fire(plus.webview.currentWebview().opener(), 'refreshZonep', {
 									tempIndex: tempIndex,
 									content: inputComment.value,
-									flag: '评论'
+									flag: '评论',
+									Comment:Comment
 								})
 								mui.back();
 							}else{
