--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -18,11 +18,11 @@
 		<link href="../../css/homework/subjects-icon.css" rel="stylesheet" />
 		<script src="../../js/mui.min.js"></script>
 		<style type="text/css">
-			/*.mui-table-view:before,
-			.mui-table-view:after
+			#content:before,
+			#content:after
 			 {
 				height: 0px;
-			}*/
+			}
 		</style>
 	</head>
 
@@ -35,7 +35,7 @@
 		</nav>
 		<div class="mui-content mui-scroll-wrapper" style="background-color: white;">
 			<div class="mui-scroll">
-				<ul class="mui-table-view"  >
+				<ul  id="content" class="mui-table-view"  >
 					<li class="mui-table-view-cell mui-media ">
 						<img>
 						<span id="img" class=" iconfont subject-icon" style="margin-left: -10px;"></span>
