0005540: 如果第一次点击回答上传九张图片没有上传，然后再次点击回答界面，界面会闪一下九张图片然后消失

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -75,7 +75,12 @@
 		<script src="../../js/publicQiuzhiProtocol.js" type="text/javascript" charset="utf-8"></script>
 
 		<script type="text/javascript">
-			mui.init();
+			mui.init({
+				beforeback:function(){
+					document.getElementById("pictures").innerHTML="";
+					return true;
+				}
+			});
 			//将传值到的标题显示
 			var askModel; //问题model
 			var answerInfo; //答案信息
@@ -89,7 +94,7 @@
 				jQuery('#answerContent').prop("maxLength", "4000");
 				window.addEventListener('qiuzhi-addAnswer', function(event) {
 					CloudFileUtil.files = [];
-					events.clearChild(document.getElementById('pictures'));
+					document.getElementById('pictures').innerHTML="";
 					type = 0;
 					askModel = event.detail.data;
 					document.getElementById('title').innerText = '我要回答';
@@ -108,7 +113,7 @@
 				//加载评论
 				window.addEventListener('add-comment', function(e) {
 					CloudFileUtil.files = [];
-					events.clearChild(document.getElementById('pictures'))
+					document.getElementById('pictures').innerHTML="";
 					type = 1;
 					document.getElementById('answerContent').value = "";
 					document.getElementById('title').innerText = '我要评论';
