--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -32,7 +32,7 @@
 			<div id="title_left"></div>
 			<h1 id="title" class="mui-title"></h1>
 			<div id="random_icon">
-				<a id="plus" class="mui-icon mui-pull-right mui-icon-plusempty"></a>
+				<a id="add" class="mui-icon mui-pull-right mui-icon-plusempty"></a>
 				<h1 id="title" class="mui-title">云盘</h1>
 			</div>
 
