二维码修改

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -364,7 +364,7 @@
 					}else if(this.id == 'aboutme'){
 						events.openNewWindow('../quan/aboutme.html')
 					}else{
-						
+						events.openNewWindowWithData('../mine/ReadQRCode.html', '');
 					}
 				})
 				window.addEventListener("homeworkReady", function() {
