--- a/JiaoBaoYun-hb/html/mine/QRCode.html
+++ b/JiaoBaoYun-hb/html/mine/QRCode.html
@@ -8,8 +8,8 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
-		<script src="../../js/utils/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/utils/jquery.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
+		<!--<script src="../../js/utils/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>-->
+		
 	</head>
 
 	<body>
@@ -41,27 +41,29 @@
 
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
-
+		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/utils/jquery.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			var curPage = plus.webview.currentWebview();
-			var groupModel = curPage.data;//群model
-			var temp0 = escape(groupModel.gname,'UTF-8');
-			var temp1 = escape(groupModel.gnote,'UTF-8');
-			var qrcodeUrl = '1@'+groupModel.gid+'@'+temp0+'@'+groupModel.gimg+'@'+temp1;//code1，代表是群二维码
-			document.getElementById("groupImg").src = groupModel.gimg;
-			document.getElementById("groupName").innerText = groupModel.gname;
-			
-			console.log('qrcodeUrl='+qrcodeUrl);
+			var qrcodeUrl;
 			mui.init({
 				swipeBack: true //启用右滑关闭功能
 			});
 			mui.plusReady(function() {
+				var curPage = plus.webview.currentWebview();
+			var groupModel = curPage.data;//群model
+			var temp0 = escape(groupModel.gname,'UTF-8');
+			var temp1 = escape(groupModel.gnote,'UTF-8');
+			qrcodeUrl = '1@'+groupModel.gid+'@'+temp0+'@'+groupModel.gimg+'@'+temp1;//code1，代表是群二维码
+			document.getElementById("groupImg").src = updateHeadImg(groupModel.gimg,2);
+			document.getElementById("groupName").innerText = groupModel.gname;
+			
+			console.log('qrcodeUrl='+qrcodeUrl);
 				makrQRCode();
 			});
 
 			// 制作二维码
 			function makrQRCode() {
-				$('.qrcode').qrcode(qrcodeUrl);
+				jQuery('.qrcode').qrcode(qrcodeUrl);
 			}
 		</script>
 	</body>
