--- a/JiaoBaoYun-hb/html/mine/QRCode.html
+++ b/JiaoBaoYun-hb/html/mine/QRCode.html
@@ -31,8 +31,9 @@
 		<div class="mui-content mui-fullscreen" style="background: white;"> 
 			<div id=""  style="background: white; margin: 2.5rem; position: absolute;top: 5.3rem;right: 0;bottom: 7.5rem;left: 0;">
 				<div style="padding: 1.8rem;">
-					<img id="groupImg" style="width: 4.5rem;height: 4.5rem;float: left;">
-					<span id="groupName" style="line-height: 4.5rem;margin-left: 1rem;"></span>
+					<img id="groupImg" style="width: 4.5rem;height: 4.5rem;float: left; border-radius: 50%;">
+					<h6 id="groupName" style="margin-left: 1rem;color: #323232;"></h6>
+					<p id="group-info"></p>
 				</div>
 				<div class="qrcode" style="background: white;text-align: center;padding: 1rem;width: 100%;height: 100%;"></div>
 			</div>
@@ -56,7 +57,7 @@
 			qrcodeUrl = '1@'+groupModel.gid+'@'+temp0+'@'+groupModel.gimg+'@'+temp1;//code1，代表是群二维码
 			document.getElementById("groupImg").src = updateHeadImg(groupModel.gimg,2);
 			document.getElementById("groupName").innerText = groupModel.gname;
-			
+			document.getElementById("group-info").innerText=groupModel.gnote;
 			console.log('qrcodeUrl='+qrcodeUrl);
 				makrQRCode();
 			});
