回退版本 删除评论出问题 复制文件

--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -222,9 +222,9 @@
 
 				}
 				datasource = tempRspData
+				zonepArray = [];
 				zonepArray.push(datasource);
 				setSpaceDetail(datasource);
-				console.log(JSON.stringify(datasource))
 
 			})
 		}
