添加二维码图标

--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -44,10 +44,10 @@
 				</div>
 				<div style="width: 100%;background-color: #E4E4E4;height: 1px;"></div>
 				<ul class="mui-table-view" style="margin-top: 20px;background-color: white;">
-					<li class="mui-table-view-cell">
+					<li id="qun-code" class="mui-table-view-cell">
 						<a class="mui-navigate-right">
 							群二维码
-							<img id="qun-code" class="qun-code" src="" alt="群二维码" />
+							<span id="data-info" class="mui-badge single-line iconfont icon-erweima" style="background-color: transparent;"></span>
 						</a>
 					</li>
 					<div style="width: 100%;background-color: #E4E4E4;height: 1px;"></div>
