--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -42,7 +42,7 @@
 				<div id="show-all" class="more-container display-none" style="background-color: white;">
 					<p>查看全部群成员<span class="mui-icon mui-icon-arrowright more-arrow"></span></p>
 				</div>
-				<div style="width: 100%;background-color: #E4E4E4;height: 1px;"></div>
+				<div style="width: 100%;background-color: #E4E4E4;height: 1px;margin-top: -10px;"></div>
 				<ul class="mui-table-view" style="margin-top: 20px;background-color: white;">
 					<li id="qun-code" class="mui-table-view-cell">
 						<a class="mui-navigate-right">
